# snowflake-api.py

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: codeql-analysis.yml
docs/: conf.py  index.rst  modules.rst  snowflakeapi.rst
snowflakeapi/: __init__.py  snowflakeapi.py
tests/: api_test.py
